// Vitest Snapshot v1

exports[`(components) button > (disable) take snapshot 1`] = `
<div>
  <button
    class="_enshita-button-box_44d66e undefined"
    disabled=""
    tabindex="0"
    type="button"
  >
    <p
      class="_enshita-button-text_44d66e undefined"
    >
      This is test
    </p>
  </button>
</div>
`;

exports[`(components) button > (icon) take snapshot 1`] = `
<div>
  <button
    class="_enshita-button-box_44d66e undefined"
    tabindex="0"
    type="button"
  >
    <div
      class="_enshita-button-icon-box_44d66e undefined"
    >
      <span />
    </div>
    <p
      class="_enshita-button-text_44d66e undefined"
    >
      This is test
    </p>
  </button>
</div>
`;

exports[`(components) button > (normal) take snapshot 1`] = `
<div>
  <button
    class="_enshita-button-box_44d66e undefined"
    tabindex="0"
    type="button"
  >
    <p
      class="_enshita-button-text_44d66e undefined"
    >
      This is test
    </p>
  </button>
</div>
`;
